fix: replace getFirst() method from get(0)